--- a/index.html
+++ b/index.html
@@ -38,21 +38,18 @@
 
   <!-- ====== الجمالية المُحسّنة (Drop‑in CSS) ====== -->
   <style>
-    :root {
+    :root{
       /* Colors */
       --primary: #1e40af;
-      --primary-600: #1d4ed8;
-      --text: #0f172a;
-      --muted: #64748b;
-      --ring: #e6eaf2;
-      --surface: #ffffff;
-      --card: #f8fafc;
+      --primary-600:#1d4ed8;
+      --text:#0f172a;
+      --muted:#64748b;
+      --ring:#e6eaf2;
+      --surface:#ffffff;
+      --card:#f8fafc;
 
       /* Radii */
-      --r-sm: 10px;
-      --r-md: 14px;
-      --r-lg: 16px;
-      --r-xl: 22px;
+      --r-sm:10px; --r-md:14px; --r-lg:16px; --r-xl:22px;
 
       /* Shadows */
       --shadow-sm: 0 2px 10px rgba(2,6,23,.06);
@@ -60,31 +57,19 @@
       --shadow-lg: 0 20px 48px rgba(2,6,23,.10);
 
       /* Spacing scale */
-      --sp-1: .25rem;
-      --sp-2: .5rem;
-      --sp-3: .75rem;
-      --sp-4: 1rem;
-      --sp-5: 1.25rem;
-      --sp-6: 1.5rem;
-      --sp-8: 2rem;
+      --sp-1:.25rem; --sp-2:.5rem; --sp-3:.75rem; --sp-4:1rem; --sp-5:1.25rem; --sp-6:1.5rem; --sp-8:2rem;
 
       /* Type scale */
-      --fs-0: .92rem;
-      --fs-1: clamp(1rem, .5vw + .9rem, 1.05rem);
-      --fs-2: clamp(1.05rem, .7vw + .95rem, 1.15rem);
-      --fs-3: clamp(1.25rem, 1vw + 1rem, 1.35rem);
-      --fs-h2: clamp(1.35rem, 1.6vw + 1rem, 1.6rem);
-      --fs-h1: clamp(1.6rem, 2.6vw + 1rem, 2.4rem);
+      --fs-0:.92rem;
+      --fs-1:clamp(1rem, .5vw + .9rem, 1.05rem);
+      --fs-2:clamp(1.05rem, .7vw + .95rem, 1.15rem);
+      --fs-3:clamp(1.25rem, 1vw + 1rem, 1.35rem);
+      --fs-h2:clamp(1.35rem, 1.6vw + 1rem, 1.6rem);
+      --fs-h1:clamp(1.6rem, 2.6vw + 1rem, 2.4rem);
     }
 
-    * {
-      box-sizing: border-box;
-    }
-
-    html, body {
-      height: 100%;
-    }
-
+    * {box-sizing:border-box}
+    html, body {height:100%}
     body {
       margin: 0;
       font-family: "Segoe UI", system-ui, -apple-system, Tahoma, Arial, sans-serif;
@@ -95,19 +80,8 @@
       text-rendering: optimizeLegibility;
     }
 
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    a:visited {
-      color: inherit;
-    }
-
-    .container {
-      width: min(1120px, 92%);
-      margin-inline: auto;
-    }
+    a {color: inherit; text-decoration: none}
+    .container {width: min(1120px, 92%); margin-inline: auto}
 
     /* Focus ring */
     :where(a, button, [role="button"], input, select, textarea):focus-visible {
@@ -116,11 +90,9 @@
       border-radius: var(--r-md);
     }
 
-    /* Navbar (glass on scroll) */
+    /* Navbar */
     .navbar {
-      position: sticky;
-      top: 0;
-      z-index: 40;
+      position: sticky; top: 0; z-index: 40;
       background: color-mix(in oklab, #ffffff 75%, transparent);
       border-bottom: 1px solid color-mix(in oklab, var(--ring) 65%, transparent);
       backdrop-filter: saturate(1.1) blur(8px);
@@ -128,117 +100,75 @@
     }
 
     body.nav-scrolled .navbar {
-      box-shadow: 0 6px 18px rgba(2, 6, 23, .06);
+      box-shadow: 0 6px 18px rgba(2,6,23,.06);
       background: color-mix(in oklab, #ffffff 85%, transparent);
     }
 
-    /* Hero */
-    header.hero {
+    .hero {
       background: linear-gradient(180deg, #fff 0, #f6f8ff 100%);
       border-bottom: 1px solid var(--ring);
     }
 
     .hero-inner {
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 2.2rem;
-      padding: 3rem 0;
-      align-items: center;
+      display: grid; grid-template-columns: 1.2fr 1fr; gap: 2.2rem; padding: 3rem 0; align-items: center;
     }
 
-    .hero h1 {
-      margin: 0 0 .6rem;
-      font-size: var(--fs-h1);
-      letter-spacing: .2px;
-    }
-
-    .hero p {
-      color: var(--muted);
-      margin: 0 0 1.2rem;
-      font-size: var(--fs-2);
-    }
+    .hero h1 {margin: 0 0 .6rem; font-size: var(--fs-h1); letter-spacing: .2px;}
+    .hero p {color: var(--muted); margin: 0 0 1.2rem; font-size: var(--fs-2);}
 
     .cta-row {
-      display: flex;
-      gap: .8rem;
-      flex-wrap: wrap;
+      display: flex; gap: .8rem; flex-wrap: wrap;
     }
 
     .btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: .5rem;
-      padding: .9rem 1.1rem;
-      border-radius: var(--r-xl);
-      font-weight: 800;
-      border: 1px solid transparent;
-      cursor: pointer;
+      display: inline-flex; align-items: center; justify-content: center; gap: .5rem;
+      padding: .9rem 1.1rem; border-radius: var(--r-xl); font-weight: 800; border: 1px solid transparent; cursor: pointer;
       transition: transform .15s ease, box-shadow .15s ease, background-color .15s ease;
-      will-change: transform;
     }
 
     .btn-primary {
-      background: var(--primary);
-      color: #fff;
-      box-shadow: 0 10px 28px rgba(29, 78, 216, .22);
+      background: var(--primary); color: #fff; box-shadow: 0 10px 28px rgba(29,78,216,.22);
     }
 
     .btn-primary:hover {
-      background: var(--primary-600);
-      transform: translateY(-1px);
+      background: var(--primary-600); transform: translateY(-1px);
     }
 
     .btn-outline {
-      background: #fff;
-      border-color: var(--ring);
+      background: #fff; border-color: var(--ring);
     }
 
     .btn-outline:hover {
-      box-shadow: var(--shadow-sm);
-      transform: translateY(-1px);
+      box-shadow: var(--shadow-sm); transform: translateY(-1px);
     }
 
     .card {
-      background: #fff;
-      border: 1px solid color-mix(in oklab, var(--ring) 70%, transparent);
-      border-radius: var(--r-lg);
-      padding: 1rem;
-      box-shadow: var(--shadow-sm);
+      background: #fff; border: 1px solid color-mix(in oklab, var(--ring) 70%, transparent);
+      border-radius: var(--r-lg); padding: 1rem; box-shadow: var(--shadow-sm);
       transition: transform .15s ease, box-shadow .15s ease, border-color .15s ease;
     }
 
     .card:hover {
-      transform: translateY(-2px);
-      box-shadow: var(--shadow-md);
-      border-color: color-mix(in oklab, var(--ring) 90%, transparent);
+      transform: translateY(-2px); box-shadow: var(--shadow-md); border-color: color-mix(in oklab, var(--ring) 90%, transparent);
     }
 
     .hero-img img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      border-radius: var(--r-xl);
+      width: 100%; height: auto; object-fit: cover; border-radius: var(--r-xl);
       box-shadow: var(--shadow-md);
     }
 
-    /* Footer */
     footer {
       border-top: 1px solid var(--ring);
       background: #fff;
     }
 
     .foot {
-      display: flex;
-      justify-content: space-between;
-      gap: 1rem;
-      align-items: center;
-      padding: 1.2rem 0;
+      display: flex; justify-content: space-between; gap: 1rem; align-items: center; padding: 1.2rem 0;
       font-size: var(--fs-1);
     }
+
   </style>
 </head>
-
 <body>
   <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
 
@@ -288,7 +218,7 @@
       </div>
     </header>
 
-    <!-- About -->
+    <!-- About Section -->
     <section aria-labelledby="about-ar" class="container">
       <div class="section-head">
         <h2 id="about-ar" data-lang="ar">من نحن</h2>
@@ -303,7 +233,7 @@
       </div>
     </section>
 
-    <!-- Events -->
+    <!-- Events Section -->
     <section aria-labelledby="events-ar" class="container">
       <div class="section-head">
         <h2 id="events-ar" data-lang="ar">الفعاليات القادمة</h2>
@@ -325,72 +255,20 @@
     </div>
   </footer>
 
-  <!-- ====== سلوك القائمة + اللغة (نفس منطقك المحسّن) ====== -->
+  <!-- ====== سلوك القائمة + اللغة ====== -->
   <script>
-    // سنة الحقوق
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Toggle Menu
     const menuBtn = document.getElementById('menu-toggle');
     const primaryNav = document.getElementById('primary-nav');
-    const mq = matchMedia('(min-width:901px)'); 
-
-    function setMenu(open){
-      primaryNav.setAttribute('data-open', String(open));
-      menuBtn.setAttribute('aria-expanded', String(open));
-      if (open){
-        primaryNav.hidden = false;
-        const firstFocusable = primaryNav.querySelector('a,button');
-        if (firstFocusable) firstFocusable.focus();
-      } else {
-        if (!mq.matches) primaryNav.hidden = true;
-        menuBtn.focus();
-      }
-    }
-
-    // تبديل بالنقر على زر القائمة
     menuBtn.addEventListener('click', () => {
-      const open = primaryNav.getAttribute('data-open') === 'true';
-      setMenu(!open);
+      const isOpen = primaryNav.getAttribute('data-open') === 'true';
+      primaryNav.setAttribute('data-open', String(!isOpen));
+      menuBtn.setAttribute('aria-expanded', String(!isOpen));
     });
 
-    // مزامنة الحالة مع التغيير بين موبايل/ديسكتوب
-    mq.addEventListener('change', e=>{
-      if (e.matches){
-        primaryNav.hidden = false;
-        primaryNav.setAttribute('data-open','false');
-        menuBtn.setAttribute('aria-expanded','false');
-      } else {
-        primaryNav.hidden = true;
-        primaryNav.setAttribute('data-open','false');
-        menuBtn.setAttribute('aria-expanded','false');
-      }
-    });
-
-    // تهيئة أولية عند التحميل
-    if (mq.matches){
-      primaryNav.hidden = false;
-      primaryNav.setAttribute('data-open','false');
-    } else {
-      primaryNav.hidden = true;
-      primaryNav.setAttribute('data-open','false');
-    }
-
-    // إغلاق بالنقر خارج
-    document.addEventListener('click', (e)=>{
-      const open = primaryNav.getAttribute('data-open') === 'true';
-      if(open && !primaryNav.contains(e.target) && !menuBtn.contains(e.target)){
-        setMenu(false);
-      }
-    });
-
-    // إغلاق بـ ESC
-    document.addEventListener('keydown', (e)=>{
-      if(e.key === 'Escape'){
-        const open = primaryNav.getAttribute('data-open') === 'true';
-        if (open) setMenu(false);
-      }
-    });
-
-    // تبديل اللغة + حفظ التفضيل
+    // Language Toggle
     const toggleBtn = document.getElementById('lang-toggle');
     let isEn = localStorage.getItem('khotwa_lang') === 'en';
     function setLang(en){
@@ -403,7 +281,7 @@
       toggleBtn.setAttribute('aria-pressed', en ? 'true' : 'false');
       localStorage.setItem('khotwa_lang', en ? 'en' : 'ar');
     }
-    toggleBtn.addEventListener('click',()=> setLang(!isEn));
+    toggleBtn.addEventListener('click', () => setLang(!isEn));
     setLang(isEn);
   </script>
 </body>
